--- a/app/src/main/res/layout/dialog_bottom_body.xml
+++ b/app/src/main/res/layout/dialog_bottom_body.xml
@@ -108,7 +108,8 @@
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:id="@+id/switch1" />
+            android:id="@+id/switch1"
+            app:theme="@style/AppTheme"/>
     </RelativeLayout>
 
     <RelativeLayout
