--- a/app/src/main/res/layout/item_document.xml
+++ b/app/src/main/res/layout/item_document.xml
@@ -167,7 +167,7 @@
             android:max="100"
             android:progress="50"
             android:indeterminate="false"
-            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal" />
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal" />
 
     </LinearLayout>
 </RelativeLayout>
