--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,15 +4,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="?attr/actionBarSize"
     android:layout_width="match_parent"
-    android:minHeight="?attr/actionBarSize"
     android:background="?attr/colorPrimary"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"  >
-
-    <Spinner android:id="@+id/toolbar_spinner"
-        android:theme="@style/ThemeOverlay.AppCompat.Light"
-        style="@style/AppTheme.Spinner.DropDown.ActionBar"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"/>
-
-</android.support.v7.widget.Toolbar>
+    app:layout_scrollFlags="scroll|enterAlways|snap"
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
