--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--color for Nav Drawer like GoogleMaps-->
-    <color name="unknownFile">@color/md_grey_700</color>
+    <color name="unknownFileColor">@color/md_grey_700</color>
 
     <color name="selectedItem">@color/colorPrimary</color>
     <color name="colorPressedText">#f2f2f2</color>
