Make activity handle drawer, searchview and sort menu.

--- a/app/src/main/res/layout/fragment_document_list.xml
+++ b/app/src/main/res/layout/fragment_document_list.xml
@@ -12,4 +12,6 @@
         android:layout_height="match_parent"
         app:layoutManager="LinearLayoutManager"/>
 
+    <include layout="@layout/view_empty_stub" />
+
 </android.support.v4.widget.SwipeRefreshLayout>
