--- a/app/src/main/res/layout/activity_document_viewer.xml
+++ b/app/src/main/res/layout/activity_document_viewer.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="io.github.nafanya.vkdocs.presentation.ui.views.activities.DocumentViewerActivity">
+    tools:context=".presentation.ui.activities.DocumentViewerActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
