--- a/app/src/main/res/layout/fragment_document_viewer.xml
+++ b/app/src/main/res/layout/fragment_document_viewer.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="io.github.nafanya.vkdocs.presentation.ui.views.activities.DocumentViewerActivity">
+    tools:context=".presentation.ui.activities.DocumentViewerActivity">
 
     <TextView
         android:id="@+id/section_label"
