--- a/app/src/main/res/menu/menu_document_viewer.xml
+++ b/app/src/main/res/menu/menu_document_viewer.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="io.github.nafanya.vkdocs.presentation.ui.views.activities.DocumentViewerActivity">
+    tools:context=".presentation.ui.activities.DocumentViewerActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
