--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,8 +4,10 @@
     <dimen name="material_drawer_item_primary_text">16sp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
 
-    <dimen name="settings_primary_label">18sp</dimen>
-    <dimen name="settings_secondary_label">16sp</dimen>
+    <dimen name="settings_primary_label">16sp</dimen>
+    <dimen name="settings_secondary_label">20sp</dimen>
+    <dimen name="subsection_text">15sp</dimen>
+    <dimen name="margin_primary">8dp</dimen>
 
 
     <dimen name="unknown_file">200dp</dimen>
