Rewrite layout for document item. Changed document item icons. Fixed offline fragment getArguments() not being called in constructor.

--- a/app/src/main/res/layout/dialog_bottom_body.xml
+++ b/app/src/main/res/layout/dialog_bottom_body.xml
@@ -67,7 +67,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/m_grid_2x"
             style="@style/FixedSizeIcon"
-            app:srcCompat="@drawable/download"/>
+            app:srcCompat="@drawable/download_grey"/>
 
         <TextView
             android:layout_width="match_parent"
