--- a/app/src/main/res/drawable/download_grey.xml
+++ b/app/src/main/res/drawable/download_grey.xml
@@ -1,4 +1,4 @@
-<!-- drawable/download.xml -->
+<!-- drawable/download_grey.xmly.xml -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:height="24dp"
     android:width="24dp"
