--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,18 +46,11 @@
         <item name="android:orientation">vertical</item>
     </style>
 
-    <style name="FixedSizeIcon">
-        <item name="android:layout_width">@dimen/m_grid_9x</item>
-        <item name="android:layout_height">@dimen/m_grid_9x</item>
-        <item name="android:padding">@dimen/m_grid_1x</item>
-    </style>
-
     <style name="EntryLabel">
         <item name="android:textAppearance">@style/TextAppearanceSecondary</item>
         <item name="android:duplicateParentState">true</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginRight">@dimen/m_grid_1x</item>
         <item name="android:maxLines">1</item>
         <item name="android:singleLine">true</item>
     </style>
@@ -118,7 +111,6 @@
     <style name="ListEntryTitle.DocList" parent="@style/ListEntryTitle">
         <item name="android:textSize">@dimen/m_entry_text_size_primary</item>
         <item name="android:textColor">@color/m_entry_text_primary</item>
-        <item name="android:layout_marginLeft">@dimen/m_grid_2x</item>
         <item name="android:layout_marginTop">@dimen/m_grid_2x</item>
     </style>
 
@@ -144,5 +136,34 @@
         <item name="android:textColor">@color/m_entry_text_primary</item>
         <item name="android:maxLines">1</item>
         <item name="android:lines">1</item>
+    </style>
+
+    <style name="RightButton" parent="Widget.AppCompat.ImageButton">"
+        <item name="android:background">?selectableItemBackground</item>
+        <item name="android:layout_width">@dimen/m_grid_7x</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_alignParentRight">true</item>
+    </style>
+
+    <style name="RightButtonContainer">
+        <item name="android:layout_width">@dimen/m_grid_7x</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:paddingLeft">@dimen/m_grid_2x</item>
+        <item name="android:paddingRight">@dimen/m_grid_2x</item>
+    </style>
+
+    <style name="FixedSizeIcon">
+        <item name="android:layout_width">@dimen/m_entry_icon_size</item>
+        <item name="android:layout_height">@dimen/m_entry_icon_size</item>
+        <item name="android:layout_marginLeft">@dimen/m_grid_2x</item>
+        <item name="android:layout_marginRight">@dimen/m_grid_2x</item>
+        <item name="android:scaleType">center</item>
+        <item name="android:padding">6dp</item>
+    </style>
+
+    <style name="SmallFixedSizeIcon">
+        <item name="android:layout_width">@dimen/m_grid_2.5x</item>
+        <item name="android:layout_height">@dimen/m_grid_2.5x</item>
+        <item name="android:scaleType">center</item>
     </style>
 </resources>
