--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -57,12 +57,12 @@
                 app:srcCompat="@drawable/ic_folder"/>
 
             <TextView
-                style="@style/AppTheme.SettingsSecondarySection"
+                style="@style/AppTheme.SettingsStatistic"
                 android:text="@string/total_documents_label"
                 android:layout_width="wrap_content"/>
 
             <TextView
-                style="@style/AppTheme.SettingsSecondarySection"
+                style="@style/AppTheme.SettingsStatistic"
                 android:id="@+id/total_documents"
                 android:layout_width="wrap_content"
                 android:gravity="right"
@@ -70,10 +70,7 @@
                 android:text="..."/>
         </LinearLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@android:color/darker_gray"/>
+        <View style="@style/AppTheme.DividerSettingsStatistic"/>
 
         <LinearLayout
             style="@style/AppTheme.SettingsItem"
@@ -85,12 +82,12 @@
                 app:srcCompat="@drawable/ic_offline_green_settings" />
 
             <TextView
-                style="@style/AppTheme.SettingsSecondarySection"
+                style="@style/AppTheme.SettingsStatistic"
                 android:text="@string/offline_documents_label"
                 android:layout_width="wrap_content"/>
 
             <TextView
-                style="@style/AppTheme.SettingsSecondarySection"
+                style="@style/AppTheme.SettingsStatistic"
                 android:id="@+id/offline_statistic"
                 android:layout_width="wrap_content"
                 android:text="..."
@@ -98,10 +95,7 @@
                 android:gravity="right"/>
         </LinearLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@android:color/darker_gray"/>
+        <View style="@style/AppTheme.DividerSettingsStatistic"/>
 
         <LinearLayout
             style="@style/AppTheme.SettingsItem"
@@ -113,13 +107,13 @@
                 app:srcCompat="@drawable/download_blue" />
 
             <TextView
-                style="@style/AppTheme.SettingsSecondarySection"
+                style="@style/AppTheme.SettingsStatistic"
                 android:text="@string/cached_documents_label"
                 android:layout_width="wrap_content"/>
 
 
             <TextView
-                style="@style/AppTheme.SettingsSecondarySection"
+                style="@style/AppTheme.SettingsStatistic"
                 android:id="@+id/cache_statistic"
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
