--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,17 @@
         <item name="textColor">@android:color/black</item>
     </style>-->
 
+    <style name="AppTheme.DividerSettingsStatistic">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">@android:color/darker_gray</item>
+        <item name="android:layout_marginLeft">30dp</item>
+    </style>
+
+    <style name="AppTheme.SettingsStatistic" parent="AppTheme.SettingsSecondarySection">
+        <item name="android:textColor">@color/md_grey_700</item>
+    </style>
+
     <style name="AppTheme.SettingsSecondarySection">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
