Fixed BottomSheetBehavior. Now fully expands. Fixed missing icon in header.

--- a/app/src/main/res/layout/dialog_bottom_header.xml
+++ b/app/src/main/res/layout/dialog_bottom_header.xml
@@ -1,58 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:src="http://schemas.android.com/tools"
     android:id="@+id/header"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/white"
     android:minHeight="@dimen/bottom_dialog_header_height">
 
-    <View
-        android:id="@+id/header_body"
-        android:layout_width="fill_parent"
-        android:layout_height="@dimen/bottom_dialog_header_height"
-        android:layout_alignParentTop="true"
-        android:duplicateParentState="true"
-        android:focusable="false" />
-
-        <RelativeLayout
-            android:id="@+id/doc_icon_wrapper"
-            android:layout_width="@dimen/m_entry_icon_size"
-            android:layout_height="@dimen/m_entry_icon_size"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/m_grid_2x"
-            android:layout_marginRight="@dimen/m_grid_3x"
-            android:duplicateParentState="true"
-            android:focusable="false"
-            android:padding="@dimen/m_entry_icon_padding"
-            android:scaleType="center">
-
-            <ImageView
-                android:id="@+id/ic_document_type"
-                style="@style/FixedSizeIcon"
-                android:focusable="false"
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/file_document"/>
-
-        </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@id/header_body"
-        android:orientation="vertical"
+    <ImageView
+        android:id="@+id/ic_document_type"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/doc_icon_wrapper"
-        android:layout_toEndOf="@+id/doc_icon_wrapper"
-        android:layout_alignRight="@id/header_body">
+        style="@style/FixedSizeIcon.Large"
+        src:appCompat="@drawable/file_document" />
 
-        <TextView
-            android:id="@+id/text_document_title"
-            android:gravity="center_horizontal|left"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            style="@style/TextAppearance.AppCompat.Headline"
-            android:singleLine="true"
-            android:text="Archive.zip" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/text_document_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:text="Archive.zip"
+        android:layout_marginRight="@dimen/m_grid_2x"
+        android:singleLine="true"
+        style="@style/TextAppearance.AppCompat.Headline"
+        android:layout_alignBottom="@+id/ic_document_type"
+        android:layout_toRightOf="@+id/ic_document_type"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
