--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -199,6 +199,13 @@
         <item name="android:padding">6dp</item>
     </style>
 
+    <style name="FixedSizeIcon.Large">
+        <item name="android:layout_width">@dimen/m_entry_icon_size</item>
+        <item name="android:layout_height">@dimen/m_entry_icon_size</item>
+        <item name="android:scaleType">center</item>
+        <item name="android:padding">0dp</item>
+    </style>
+
     <style name="SmallFixedSizeIcon">
         <item name="android:layout_width">@dimen/m_grid_2.5x</item>
         <item name="android:layout_height">@dimen/m_grid_2.5x</item>
