--- a/app/src/main/res/drawable/play.xml
+++ b/app/src/main/res/drawable/play.xml
@@ -1,8 +1,8 @@
 <!-- drawable/play.xml -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:height="@dimen/audio_player_button"
-    android:width="@dimen/audio_player_button"
+    android:height="24dp"
+    android:width="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path android:fillColor="@color/colorPlayerButton" android:pathData="M8,5.14V19.14L19,12.14L8,5.14Z" />
+    <path android:fillColor="@color/colorAccent" android:pathData="M8,5.14V19.14L19,12.14L8,5.14Z" />
 </vector>
