--- a/app/src/main/res/layout/activity_documents.xml
+++ b/app/src/main/res/layout/activity_documents.xml
@@ -5,7 +5,7 @@
     android:id="@+id/coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.ui.activities.documents.DocumentsActivity">
+    tools:context=".presentation.ui.activities.DocumentsActivity">
 
     <!-- TODO: move background color to resources -->
 
