--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -211,4 +211,12 @@
         <item name="android:layout_height">@dimen/m_grid_2.5x</item>
         <item name="android:scaleType">center</item>
     </style>
+
+    <style name="Button.Player" parent="Base.Widget.AppCompat.ImageButton">
+        <item name="android:scaleType">fitCenter</item>
+        <item name="android:adjustViewBounds">true</item>
+        <item name="android:layout_width">@dimen/audio_player_button</item>
+        <item name="android:layout_height">@dimen/audio_player_button</item>
+        <item name="android:background">#0000</item>
+    </style>
 </resources>
