added inplace opening downloading document. added placeholders, but not in layout

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,7 +10,7 @@
     <dimen name="margin_primary">8dp</dimen>
 
 
-    <dimen name="unknown_file">200dp</dimen>
+    <dimen name="placeholder_size">200dp</dimen>
 
     <dimen name="audio_player_button">60dp</dimen>
     <dimen name="audio_player_placeholder">450dp</dimen>
