--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="secondarySettingsSection">@color/md_grey_800</color>
     <color name="subsectionTextColor">@android:color/black</color>
 
-    <color name="unknownFileColor">@color/md_grey_700</color>
+    <color name="placeholderColor">@color/md_grey_700</color>
 
     <color name="selectedItem">@color/colorPrimary</color>
     <color name="colorPressedText">#f2f2f2</color>
