--- a/app/src/main/res/layout/fragment_audio_player.xml
+++ b/app/src/main/res/layout/fragment_audio_player.xml
@@ -32,6 +32,7 @@
             android:textSize="25sp"
             android:maxLines="1"
             android:lines="1"
+            android:singleLine="true"
             android:gravity="center_horizontal"
             android:ellipsize="middle"
             android:textColor="@color/md_white_1000"
@@ -56,7 +57,6 @@
 
         <ImageButton
             android:id="@+id/play_button"
-            android:enabled="false"
             app:srcCompat="@drawable/play"
             android:layout_above="@id/seek_bar"
             android:layout_centerHorizontal="true"
@@ -65,7 +65,6 @@
 
         <ImageButton
             android:id="@+id/pause_button"
-            android:enabled="false"
             app:srcCompat="@drawable/pause"
             android:layout_above="@id/seek_bar"
             android:layout_centerHorizontal="true"
