--- a/app/src/main/res/layout-land/fragment_audio_player.xml
+++ b/app/src/main/res/layout-land/fragment_audio_player.xml
@@ -30,6 +30,7 @@
             android:textSize="25sp"
             android:maxLines="1"
             android:lines="1"
+            android:singleLine="true"
             android:gravity="center_horizontal"
             android:ellipsize="middle"
             android:textColor="@color/md_white_1000"
@@ -66,6 +67,20 @@
             android:layout_centerHorizontal="true"
             android:visibility="gone"
             style="@style/Button.Player"/>
+
+        <TextView
+            style="@style/PlayerTimeLabel"
+            android:id="@+id/current_timestamp"
+            app:srcCompat="@drawable/play"
+            android:layout_above="@id/seek_bar"
+            android:layout_alignParentLeft="true"/>
+
+        <TextView
+            style="@style/PlayerTimeLabel"
+            android:id="@+id/duration"
+            app:srcCompat="@drawable/play"
+            android:layout_above="@id/seek_bar"
+            android:layout_alignParentRight="true"/>
     </RelativeLayout>
 
 </LinearLayout>
