--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -230,4 +230,13 @@
         <item name="android:layout_height">@dimen/audio_player_button</item>
         <item name="android:background">#0000</item>
     </style>
+
+    <style name="PlayerTimeLabel">
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:textColor">@color/md_blue_800</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
 </resources>
